--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
     "test": "vitest",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "fmt": "prettier --write ."
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.33",
