--- a/package.json
+++ b/package.json
@@ -21,26 +21,27 @@
     "@testing-library/svelte": "^5.3.1",
     "@tsconfig/svelte": "^5.0.6",
     "@types/chrome": "^0.1.36",
-    "@types/node": "^24.10.1",
-    "@vitest/coverage-v8": "^4.0.17",
+    "@types/node": "^24.10.9",
+    "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-svelte": "^3.14.0",
-    "globals": "^17.0.0",
+    "globals": "^17.1.0",
     "jsdom": "^27.4.0",
     "prettier": "^3.8.1",
     "prettier-plugin-svelte": "^3.4.1",
-    "svelte": "^5.43.8",
-    "svelte-check": "^4.3.4",
+    "svelte": "^5.48.3",
+    "svelte-check": "^4.3.5",
     "svelte-eslint-parser": "^1.4.1",
     "tsx": "^4.21.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.53.1",
+    "typescript-eslint": "^8.54.0",
     "vite": "5.4.21",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@google/genai": "^1.38.0",
+    "@lucide/svelte": "^0.563.1",
     "@openrouter/sdk": "^0.4.0"
   }
 }
