--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.38.0",
+    "@lucide/svelte": "^0.563.1",
     "@openrouter/sdk": "^0.4.0"
   }
 }
