--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "vitest": "^4.0.17"
   },
   "dependencies": {
+    "dompurify": "^3.2.7",
     "@google/genai": "^1.38.0",
     "@lucide/svelte": "^0.563.1",
-    "@openrouter/sdk": "^0.4.0"
+    "@openrouter/sdk": "^0.4.0",
+    "marked": "^12.0.2"
   }
 }
