--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
     "lint": "eslint . --max-warnings 0",
-    "format": "oxfmt ."
+    "format": "oxfmt . && prettier --write \"src/**/*.svelte\""
   },
   "dependencies": {
     "@lucide/svelte": "^0.563.1",
