--- a/web/.env.prod
+++ b/web/.env.prod
@@ -1,3 +1,4 @@
-PUBLIC_API_BASE_URL=https://mem.ldd.cool
+# change public api url requries changing URL configuration on supabase auth website
+PUBLIC_API_BASE_URL=https://memstore.ldd.cool
 PUBLIC_SUPABASE_URL=https://nnosdjngtrifedwdhiuk.supabase.co
 PUBLIC_SUPABASE_PUBLISHABLE_KEY=sb_publishable_K8UIjx_5Faz2UkV4gO8pPA_e9xwLSwD
