only signed-in users can save to anki

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -16,6 +16,11 @@
     {
       "matches": ["<all_urls>"],
       "js": ["src/content/modal.svelte.ts"]
+    },
+    {
+      "matches": ["<all_urls>"],
+      "js": ["src/content/auth-bridge.ts"],
+      "run_at": "document_start"
     }
   ]
 }
