--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "prettier-plugin-svelte": "^3.4.1",
     "svelte": "^5.48.2",
     "svelte-check": "^4.3.5",
+    "svelte-confetti": "^2.3.2",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   }
