--- a/web/.env.dev
+++ b/web/.env.dev
@@ -1,3 +1,3 @@
-PUBLIC_API_BASE_URL=http://localhost:8000
+PUBLIC_API_BASE_URL=http://memstore.ldd.cool
 PUBLIC_SUPABASE_URL=https://nnosdjngtrifedwdhiuk.supabase.co
 PUBLIC_SUPABASE_PUBLISHABLE_KEY=sb_publishable_K8UIjx_5Faz2UkV4gO8pPA_e9xwLSwD
